--- a/research_notes/index.html
+++ b/research_notes/index.html
@@ -339,6 +339,8 @@ kbd {
 
 
 <!--CONTENTS-->
+<h4 id="toc_3">7. 2021/03/21 Analysing simulation trajectory to obtain the rotational diffusion coefficient
+  <a href="notes/20210321_Analysing simulation trajectory to obtain the rotational diffusion coefficient.html">more...</a></h4>
 <h4 id="toc_3">6. 2021/03/15 JCP selected our recent paper as an Editor's Pick
   <a href="notes/20210315_JCP selected our recent paper as an Editor's Pick.html">more...</a></h4>
 <h4 id="toc_3">5. 2021/03/08 A mechanical approach to control pressure in LAMMPS simulations
