--- a/publications/publications_list.html
+++ b/publications/publications_list.html
@@ -407,15 +407,15 @@ kbd {
 
 <h3 id="toc_37"><strong><span style="color:#2da266">2014</span></strong></h3>
 
-<h5 id="toc_38">9. <span style="color:#2da266">Y Liu</span>, X Zhang. <em>A unified mechanism for the stability of surface nanobubbles: Contact line pinning and supersaturation.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 141, 134702 (2014).<sup><a href="http://aip.scitation.org/doi/10.1063/1.4896937">Link</a></sup></h5>
+<h5 id="toc_38">9. <span style="color:#2da266">Y Liu</span>, X Zhang. <em>A unified mechanism for the stability of surface nanobubbles: Contact line pinning and supersaturation.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 141, 134702 (2014). <span style="color:#ff931e">[citations: 79]</span><sup><a href="http://aip.scitation.org/doi/10.1063/1.4896937">Link</a></sup></h5>
 
-<h5 id="toc_39">8. <span style="color:#2da266">Y Liu</span>, J Wang, X Zhang, W Wang. <em>Contact line pinning and the relationship between nanobubbles and substrates.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 140, 54705 (2014).<sup><a href="http://aip.scitation.org/doi/10.1063/1.4863448">Link</a></sup></h5>
+<h5 id="toc_39">8. <span style="color:#2da266">Y Liu</span>, J Wang, X Zhang, W Wang. <em>Contact line pinning and the relationship between nanobubbles and substrates.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 140, 54705 (2014). <span style="color:#ff931e">[citations: 57]</span><sup><a href="http://aip.scitation.org/doi/10.1063/1.4863448">Link</a></sup></h5>
 
 <h5 id="toc_40">7. Q Guo, <span style="color:#2da266">Y Liu</span>, G Jiang, X Zhang. <em>Condensation of droplets on nanopillared hydrophobic substrates.</em> <span style="color:#00bfff">Soft Matter</span> 10, 1182 (2014).<sup><a href="http://xlink.rsc.org/?DOI=c3sm52260a">Link</a></sup></h5>
 
 <h3 id="toc_41"><strong><span style="color:#2da266">2013</span></strong></h3>
 
-<h5 id="toc_42">6. <span style="color:#2da266">Y Liu</span>, X Zhang. <em>Nanobubble stability induced by contact line pinning.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 138, 014706 (2013).<sup><a href="http://aip.scitation.org/doi/10.1063/1.4773249">Link</a></sup></h5>
+<h5 id="toc_42">6. <span style="color:#2da266">Y Liu</span>, X Zhang. <em>Nanobubble stability induced by contact line pinning.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 138, 014706 (2013). <span style="color:#ff931e">[citations: 127]</span><sup><a href="http://aip.scitation.org/doi/10.1063/1.4773249">Link</a></sup></h5>
 
 <h5 id="toc_43">5. <span style="color:#2da266">Y Liu</span>, J Wang, X Zhang. <em>Accurate determination of the vapor-liquid-solid contact line tension and the viability of Young equation.</em> <span style="color:#00bfff">Sci. Rep.</span> 3, 2008 (2013).<sup><a href="http://www.nature.com/articles/srep02008">Link</a></sup></h5>
 
