--- a/research_notes/notes/20210217_Units conversion in dissipative particle dynamics (DPD).html
+++ b/research_notes/notes/20210217_Units conversion in dissipative particle dynamics (DPD).html
@@ -436,7 +436,7 @@ However, above choice for \(\Delta t\) and \(\gamma\) yields very small Schmidt 
 <img src="images/wechat.png" alt="wechat" width="80" height="80" /></p>
 
 <p>&copy; 2021 Yawei Liu. All content licensed under the 
-  <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution License (CC-BY)</a></p>
+  <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution License (CC-BY-NC 4.0)</a></p>
 
 <h2 id="toc_8"></h2>
 
