--- a/research_notes/notes/20210222_From disordered to ordered- An example of self-assembly of nanorods.html
+++ b/research_notes/notes/20210222_From disordered to ordered- An example of self-assembly of nanorods.html
@@ -361,7 +361,7 @@ kbd {
 <img src="images/gitee_yawei.png" alt="gitee page" width="80" height="80" />
 <img src="images/wechat.png" alt="wechat" width="80" height="80" /></p>
 
-<p>&copy; 2021 Yawei Liu. All content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution License (CC-BY-NC 4.0)</a>.</p>
+<p>&copy; 2021 Yawei Liu. All content licensed under the <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution License (CC BY-NC 4.0)</a>.</p>
 
 <h2 id="toc_3"></h2>
 
