--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 							view <span id="busuanzi_value_site_uv">       </span> times
 						</span>
 
-						<p>&copy; 2021 Yawei Liu. All content licensed under the <a href="https://creativecommons.org/licenses/by-nc/4.0/legalcode#languages">Creative Commons Attribution License (CC BY-NC 4.0)</a>.
+						<p>&copy; 2021 Yawei Liu. All content licensed under the <a href="https://creativecommons.org/licenses/by-nc/4.0/legalcode#languages">Creative Commons Attribution-NonCommercial License 4.0 International (CC BY-NC 4.0)</a>.
 							Images: Any image presented in this website may be subject 
 							to copyright and remain the property of their respective owners. 
 							No copyright infringement intended. If you hold the copyright to a 
