--- a/research_notes/index.html
+++ b/research_notes/index.html
@@ -339,8 +339,8 @@ kbd {
 
 
 <!--CONTENTS-->
-<h4 id="toc_3">9. 2021/04/05 Dynamics simulations of self-assembly of nanorods (Tutorial I: Preparation)
-  <a href="notes/20210405_Dynamics simulations of self-assembly of nanorods (Tutorial I_Preparation).html">more...</a></h4>
+<h4 id="toc_3">9. 2021/04/05 Dynamics simulations of self-assembly of nanoparticles (Tutorial I: Preparation)
+  <a href="notes/20210405_Dynamics simulations of self-assembly of nanoparticles (Tutorial I_Preparation).html">more...</a></h4>
 <h4 id="toc_3">8. 2021/03/28 Computing diffusion coefficient and dynamic viscosity of a simple liquid in LAMMPS
   <a href="notes/20210328_Computing diffusion coefficient and dynamic viscosity of a simple liquid in LAMMPS.html">more...</a></h4>
 <h4 id="toc_3">7. 2021/03/21 Analysing simulation trajectory to obtain the rotational diffusion coefficient
