--- a/research_notes/notes/20210405_Dynamics simulations of self-assembly of nanoparticles (Tutorial I_Preparation).html
+++ b/research_notes/notes/20210405_Dynamics simulations of self-assembly of nanoparticles (Tutorial I_Preparation).html
@@ -333,7 +333,7 @@ kbd {
 
 <h4 id="toc_0"><a href="../../index.html">HOME</a> <a href="../index.html">CONTENTS</a></h4>
 
-<h2 id="toc_1">Dynamics simulations of self-assembly of nanorods (Tutorial I: Preparation)</h2>
+<h2 id="toc_1">Dynamics simulations of self-assembly of nanoparticles (Tutorial I: Preparation)</h2>
 
 <p><em>by Yawei Liu  @ Sydney, Australia 2021/04/04</em></p>
 
@@ -369,10 +369,10 @@ kbd {
 
 <ul>
 <li><a href="https://freud.readthedocs.io/en/latest/">Freud</a>: <code>conda install -c conda-forge freud</code></li>
-<li><a href="https://plato-draw.readthedocs.io/en/latest/">Plato</a>: <code>pip install plato-draw</code>
+<li><a href="https://plato-draw.readthedocs.io/en/latest/">Plato</a>: <code>pip install plato-draw</code></li>
+</ul>
 
-<ul>
-<li>To use Plato in Jupyterlab, install <a href="https://nodejs.org/en/">nodejs</a> and <a href="https://github.com/jupyter-widgets/pythreejs">pythreejs</a> as follows:
+<p>To use Plato in Jupyterlab, install <a href="https://nodejs.org/en/">nodejs</a> and <a href="https://github.com/jupyter-widgets/pythreejs">pythreejs</a> as follows:</p>
 
 <ul>
 <li><code>conda install -c conda-forge &#39;nodejs&gt;=12&#39;</code></li>
@@ -382,8 +382,6 @@ kbd {
 <li><code>jupyter labextension install --no-build jupyter-datawidgets/extension</code></li>
 <li><code>jupyter labextension install jupyter-threejs</code></li>
 <li><code>jupyter labextension list</code>&ldquo;`</li>
-</ul></li>
-</ul></li>
 </ul></li>
 <li><p>Also, some softwares like VMD can also be used to visualise the simulation system, I am going to write some Python scripts to convert the simulation data to the file that can be read by these softwares.</p></li>
 </ul>
