--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 						<div class="content">
 							<ul class="actions small">
 								<li><a href="#research" class="button fit smooth-scroll">Researches</a></li>
+								<li><a href="publications/publications_list.html" class="button fit smooth-scroll">Publications</a></li>
 								<li><a href="research_notes/index.html" class="button fit smooth-scroll">Notes</a></li>
 								<li><a href="#more" class="button fit smooth-scroll">More</a></li>
 							</ul> 
