--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 					<section id="top" class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<ul class="actions small">
-								<li><a href="#research" class="button fit smooth-scroll">Researches</a></li>
-								<li><a href="publications/publications_list.html" class="button fit smooth-scroll">Publications</a></li>
-								<li><a href="research_notes/index.html" class="button fit smooth-scroll">Notes</a></li>
+								<li><a href="#research" class="button fit smooth-scroll">Research</a></li>
+								<li><a href="publications/publications_list.html" class="button fit smooth-scroll">Publication</a></li>
+								<li><a href="research_notes/index.html" class="button fit smooth-scroll">Note</a></li>
 								<li><a href="#more" class="button fit smooth-scroll">More</a></li>
 							</ul> 
 							<!--
