--- a/research_notes/notes/202104011_Dynamics simulations of self-assembly of nanoparticles (Tutorial II_Building model).html
+++ b/research_notes/notes/202104011_Dynamics simulations of self-assembly of nanoparticles (Tutorial II_Building model).html
@@ -339,7 +339,7 @@ kbd {
 
 <p>In this tutorial, I am going to show how to using Python to build rigid overlapping-sphere model [1] for nanoparticles with a given geometry.</p>
 
-<p>The first example is a rod-shaped particle, which is described as a <em>spherocylinder</em> consisting of a cylindrical segment of length \(L\) and diameter \(D\) capped with two hemispheres. In the overlapping-sphere model, this spherocylinder is represented by a rigid linear chain of overlapping sphere of diameter \(D\) with their centres distributed uniformly on a line segment of length \(L\). The distance between consecutive spheres should be small enough so that the side effects associated with the grooves between overlapping spheres is negligible (I often use a value \(\Delta l \le 0.5\)).</p>
+<p>The first example is a rod-shaped particle, which is described as a <em>spherocylinder</em> consisting of a cylindrical segment of length \(L\) and diameter \(D\) capped with two hemispheres. In the overlapping-sphere model, this spherocylinder is represented by a rigid linear chain of overlapping sphere of diameter \(D\) with their centres distributed uniformly on a line segment of length \(L\). The distance between consecutive spheres should be small enough so that the side effects associated with the grooves between overlapping spheres is negligible (I often use a value \(\Delta l \le 0.5D\)).</p>
 
 <p>Here is the Python code to define a Class for rod-shaped particles: </p>
 
