--- a/publications/publications_list.html
+++ b/publications/publications_list.html
@@ -367,7 +367,7 @@ kbd {
 
 <h5 id="toc_17">26. R Ganti, <span style="color:#2da266">Y Liu</span>, D Frenkel. <em>Hamiltonian transformation to compute thermo-osmotic forces.</em> <span style="color:#ff931e">Phys. Rev. Lett.</span> 121, 068002 (2018).<sup><a href="https://link.aps.org/doi/10.1103/PhysRevLett.121.068002">Link</a></sup></h5>
 
-<h5 id="toc_18">25. J Zou, H Zhang, Z Guo, <span style="color:#2da266">Y Liu</span>, J Wei, Y Huang, X Zhang. <em>Surface nanobubbles nucleate liquid boiling.</em> <span style="color:#00bfff">Langmuir</span> 34, 14096–14101 (2018).<sup><a href="http://pubs.acs.org/doi/10.1021/acs.langmuir.8b03290">Link</a></sup></h5>
+<h5 id="toc_18">25. J Zou, H Zhang, Z Guo, <span style="color:#2da266">Y Liu</span>, J Wei, Y Huang, X Zhang. <em>Surface nanobubbles nucleate liquid boiling.</em> <span style="color:#00bfff">Langmuir</span> 34, 14096 (2018).<sup><a href="http://pubs.acs.org/doi/10.1021/acs.langmuir.8b03290">Link</a></sup></h5>
 
 <h5 id="toc_19">24. H Zhang, S Chen, Z Guo, <span style="color:#2da266">Y Liu</span>, F Bresme, X Zhang. <em>Contact line pinning effects influence determination of the line tension of droplets adsorbed on substrates.</em> <span style="color:#00bfff">J. Phys. Chem. C</span> 122, 17184 (2018)<sup><a href="http://pubs.acs.org/doi/10.1021/acs.jpcc.8b03588">Link</a></sup></h5>
 
@@ -407,7 +407,7 @@ kbd {
 
 <h3 id="toc_37"><strong><span style="color:#2da266">2014</span></strong></h3>
 
-<h5 id="toc_38">9. <span style="color:#2da266">Y Liu</span>, X Zhang. <em>A unified mechanism for the stability of surface nanobubbles: Contact line pinning and supersaturation.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 141, 134702 (2014). <span style="color:#ff931e">[citations: 79]</span><sup><a href="http://aip.scitation.org/doi/10.1063/1.4896937">Link</a></sup></h5>
+<h5 id="toc_38">9. <span style="color:#2da266">Y Liu</span>, X Zhang. <em>A unified mechanism for the stability of surface nanobubbles: Contact line pinning and supersaturation.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 141, 134702 (2014). <span style="color:#ff931e">[citations: 80]</span><sup><a href="http://aip.scitation.org/doi/10.1063/1.4896937">Link</a></sup></h5>
 
 <h5 id="toc_39">8. <span style="color:#2da266">Y Liu</span>, J Wang, X Zhang, W Wang. <em>Contact line pinning and the relationship between nanobubbles and substrates.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 140, 54705 (2014). <span style="color:#ff931e">[citations: 57]</span><sup><a href="http://aip.scitation.org/doi/10.1063/1.4863448">Link</a></sup></h5>
 
@@ -415,7 +415,7 @@ kbd {
 
 <h3 id="toc_41"><strong><span style="color:#2da266">2013</span></strong></h3>
 
-<h5 id="toc_42">6. <span style="color:#2da266">Y Liu</span>, X Zhang. <em>Nanobubble stability induced by contact line pinning.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 138, 014706 (2013). <span style="color:#ff931e">[citations: 127]</span><sup><a href="http://aip.scitation.org/doi/10.1063/1.4773249">Link</a></sup></h5>
+<h5 id="toc_42">6. <span style="color:#2da266">Y Liu</span>, X Zhang. <em>Nanobubble stability induced by contact line pinning.</em> <span style="color:#00bfff">J. Chem. Phys.</span> 138, 014706 (2013). <span style="color:#ff931e">[citations: 129]</span><sup><a href="http://aip.scitation.org/doi/10.1063/1.4773249">Link</a></sup></h5>
 
 <h5 id="toc_43">5. <span style="color:#2da266">Y Liu</span>, J Wang, X Zhang. <em>Accurate determination of the vapor-liquid-solid contact line tension and the viability of Young equation.</em> <span style="color:#00bfff">Sci. Rep.</span> 3, 2008 (2013).<sup><a href="http://www.nature.com/articles/srep02008">Link</a></sup></h5>
 
