--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<!--<h2>Selected Publications</h2>-->
-							<h2>Over 30 papers published in jounrals including Phys. Rev. Lett., Adv. Funct. Mater., J. Chem. Phys., etc.</h2>
+							<h2>Over 30 papers published in jounrals including Phys. Rev. Lett., J. Chem. Phys., Adv. Funct. Mater., etc.</h2>
 							<h3>I want to express my heartfelt thanks to my supervisors - 
 								Prof. Daan Frenkel, Prof. Xianren Zhang, Dr. Asaph Widmer-cooper - 
 								and all collaborators/colleagues, for letting me be a part of these great work. 
