--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 								(<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/asaph-widmer-cooper.html>Dr. Asaph Widmer-Cooper's group</a>). 
 								Prior to this I was a Master/PhD student at Beijing University 
 								of Chemical Technology during 2010.9-2017.7 (Prof. Xianren Zhang's group),  
-								and a visiting PhD student at the University of Cambridge during 2014.11-2016.11 (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>).
+								and a visiting PhD student at the University of Cambridge during 2014.11-2016.11 (<a href=https://www.ch.cam.ac.uk/person/df246>Prof. Daan Frenkel's group</a>).<br />
 								(<a href="files/CV_yawei.pdf">中文简历</a>) <br />
-								<a href=https://orcid.org/0000-0002-0230-0109>ORCID</a>
 								<a href=https://scholar.google.com.au/citations?user=Bh8mdUcAAAAJ&hl=en>Google Scholar</a>
+								<a href=https://orcid.org/0000-0002-0230-0109>ORCID</a>
 								<a href=https://www.researchgate.net/profile/Yawei_Liu3>Researchgate</a> <br/>
 								<a href=https://www.sydney.edu.au/science/about/our-people/academic-staff/yawei-liu.html>USyd</a>
 								<a href=https://excitonscience.com/users/dr-yawei-liu>ACEx</a> 
